{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 370,
  "lineage": "3a035b60-85f5-5108-9507-1d52a27f0936",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f839f32b7b6d7db",
            "association_id": "eipassoc-07be0fe48651a9415",
            "domain": "vpc",
            "id": "eipalloc-09f839f32b7b6d7db",
            "network_border_group": "us-east-1",
            "network_interface": "eni-005c236b4f9b662bd",
            "private_dns": "ip-10-0-0-131.ec2.internal",
            "private_ip": "10.0.0.131",
            "public_dns": "ec2-54-172-87-105.compute-1.amazonaws.com",
            "public_ip": "54.172.87.105",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "example": "shiny-example"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:internet-gateway/igw-08f009e5f559b2659",
            "id": "igw-08f009e5f559b2659",
            "owner_id": "127293717875",
            "tags_all": {
              "example": "shiny-example"
            },
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:127293717875:loadbalancer/app/tf-lb-20240104205513722900000004/d9fbb749be1ee9dd",
            "arn_suffix": "app/tf-lb-20240104205513722900000004/d9fbb749be1ee9dd",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240104205513722900000004-2118605398.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:127293717875:loadbalancer/app/tf-lb-20240104205513722900000004/d9fbb749be1ee9dd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240104205513722900000004",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00297836ea759d5bf",
              "sg-04788c7a66e7da7ce",
              "sg-06e5fd315bf5031c1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0109da3d55cf2fddf"
              },
              {
                "subnet_id": "subnet-05ac8d1d9001e8b61"
              }
            ],
            "subnets": [
              "subnet-0109da3d55cf2fddf",
              "subnet-05ac8d1d9001e8b61"
            ],
            "tags_all": {
              "example": "shiny-example"
            },
            "vpc_id": "vpc-0c2eb985f93bb44f7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:127293717875:listener/app/tf-lb-20240104205513722900000004/d9fbb749be1ee9dd/f2fbf2ab42255d04",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:127293717875:targetgroup/tf-20240104210953110700000001/04e2c10763e75f46",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:127293717875:listener/app/tf-lb-20240104205513722900000004/d9fbb749be1ee9dd/f2fbf2ab42255d04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:127293717875:loadbalancer/app/tf-lb-20240104205513722900000004/d9fbb749be1ee9dd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "example": "shiny-example"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:127293717875:targetgroup/tf-20240104210953110700000001/04e2c10763e75f46",
            "arn_suffix": "targetgroup/tf-20240104210953110700000001/04e2c10763e75f46",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 100,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:127293717875:targetgroup/tf-20240104210953110700000001/04e2c10763e75f46",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240104210953110700000001",
            "name_prefix": "tf-",
            "port": 3838,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "example": "shiny-example"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_lb.this",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f839f32b7b6d7db",
            "association_id": "eipassoc-07be0fe48651a9415",
            "connectivity_type": "public",
            "id": "nat-0e986c0efc67bd084",
            "network_interface_id": "eni-005c236b4f9b662bd",
            "private_ip": "10.0.0.131",
            "public_ip": "54.172.87.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0109da3d55cf2fddf",
            "tags_all": {
              "example": "shiny-example"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-088f9b434d19c0c621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e986c0efc67bd084",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088f9b434d19c0c62",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08f009e5f559b2659",
            "id": "r-rtb-0244417ca2a50e4121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0244417ca2a50e412",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:route-table/rtb-088f9b434d19c0c62",
            "id": "rtb-088f9b434d19c0c62",
            "owner_id": "127293717875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e986c0efc67bd084",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "example": "shiny-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:route-table/rtb-0244417ca2a50e412",
            "id": "rtb-0244417ca2a50e412",
            "owner_id": "127293717875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f009e5f559b2659",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "example": "shiny-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d624638c807332b",
            "route_table_id": "rtb-088f9b434d19c0c62",
            "subnet_id": "subnet-037a1399dcc4a3d54"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043f786b4956cc5f0",
            "route_table_id": "rtb-088f9b434d19c0c62",
            "subnet_id": "subnet-02a23182f3746469a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083237f24eb358610",
            "route_table_id": "rtb-0244417ca2a50e412",
            "subnet_id": "subnet-0109da3d55cf2fddf"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c1837cc6c1a1a60",
            "route_table_id": "rtb-0244417ca2a50e412",
            "subnet_id": "subnet-05ac8d1d9001e8b61"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:security-group/sg-00297836ea759d5bf",
            "description": "Permit all outgoing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00297836ea759d5bf",
            "ingress": [],
            "name": "egress-all",
            "name_prefix": "",
            "owner_id": "127293717875",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "shiny-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:security-group/sg-04788c7a66e7da7ce",
            "description": "Permit incoming HTTP traffic",
            "egress": [],
            "id": "sg-04788c7a66e7da7ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": "",
            "owner_id": "127293717875",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "shiny-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:security-group/sg-06e5fd315bf5031c1",
            "description": "Permit incoming HTTPS traffic",
            "egress": [],
            "id": "sg-06e5fd315bf5031c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https",
            "name_prefix": "",
            "owner_id": "127293717875",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "shiny-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:security-group/sg-0b5dc8d8adf77c943",
            "description": "Permit some incoming traffic",
            "egress": [],
            "id": "sg-0b5dc8d8adf77c943",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3838,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3838
              }
            ],
            "name": "ingress-esc-service",
            "name_prefix": "",
            "owner_id": "127293717875",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "shiny-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:subnet/subnet-037a1399dcc4a3d54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037a1399dcc4a3d54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127293717875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "shiny-example"
            },
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:subnet/subnet-02a23182f3746469a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a23182f3746469a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127293717875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "shiny-example"
            },
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:subnet/subnet-0109da3d55cf2fddf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0109da3d55cf2fddf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127293717875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "shiny-example"
            },
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:subnet/subnet-05ac8d1d9001e8b61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ac8d1d9001e8b61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127293717875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "shiny-example"
            },
            "vpc_id": "vpc-0c2eb985f93bb44f7"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127293717875:vpc/vpc-0c2eb985f93bb44f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d758df356776f281",
            "default_route_table_id": "rtb-0328445db3e0c8ec1",
            "default_security_group_id": "sg-08ee1e1a7144959f0",
            "dhcp_options_id": "dopt-04f1275491fdb5d72",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2eb985f93bb44f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0328445db3e0c8ec1",
            "owner_id": "127293717875",
            "tags_all": {
              "example": "shiny-example"
            }
          }
        }
      ]
    }
  ]
}